Adicionando classes utilitárias

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Zingen</h1>
-    <h2>Zingen</h2>
+    <header>
+        <div class="container">
+            <h1>Teste</h1>
+        </div>
+    </header>
 </body>
 </html>
