--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Teste</h1>
+        <div class="flex gap-1">
+            <a href="#" class="btn btn-sm">Label</a>
+            <button href="#" class="btn btn-lg">Label</button>
+        </div>
+        <div class="flex gap-1">
+            <a aria-label="Label" href="#" class="btn btn-sm"></a>
+            <button aria-label="Label" href="#" class="btn btn-lg"></button>
         </div>
     </header>
 </body>
