--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="flex gap-1">
-            <a href="#" class="btn btn-sm">Label</a>
-            <button href="#" class="btn btn-lg">Label</button>
-        </div>
-        <div class="flex gap-1">
-            <a aria-label="Label" href="#" class="btn btn-sm"></a>
-            <button aria-label="Label" href="#" class="btn btn-lg"></button>
-        </div>
-    </header>
+    <ul>
+        <li>
+            <a href="" class="social" aria-label="tiktok"></a>
+            <a href="" class="social" aria-label="instagram"></a>
+            <a href="" class="social" aria-label="discord"></a>
+            <a href="" class="social" aria-label="X"></a>
+        </li>
+    </ul>
 </body>
 </html>
