--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <ul>
-        <li>
-            <a href="" class="social" aria-label="tiktok"></a>
-            <a href="" class="social" aria-label="instagram"></a>
-            <a href="" class="social" aria-label="discord"></a>
-            <a href="" class="social" aria-label="X"></a>
-        </li>
-    </ul>
+    <header>
+        <div class="container py.base">
+            <nav class="flex itenscenter gap-1.5">
+                <a href="#">
+                    <img src="assets/icons/logo.svg" alt="Logo do Zingen">
+                </a>
+
+                <a href="#about" class="desktop-only">Conheça o app</a>
+                <a href="#features" class="desktop-only">Funcionalidades</a>
+                <a href="#pricing" class="desktop-only">Planos e Preços</a>
+                <a href="#download" class="btn btn-sm">Baixar agora</a>
+            </nav>
+
+        </div>
+    </header>
 </body>
 </html>
