--- a/index.html
+++ b/index.html
@@ -25,5 +25,18 @@
 
         </div>
     </header>
+
+    <section id="hero">
+        <div class="cotainer py-xl">
+            <img src="assets/music-bars.svg" alt="">
+            <h1>Quem canta seus males espanta</h1>
+            <p>Cantar nunca foi tão fácil</p>
+
+            <div class="buttons flex itenscenter gap-1">
+                <a href="#pricing" aria-label="Ver Planos" class="btn btn-md"></a>
+                <a href="download" class="btn btn-md">Baixar Agora</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
