--- a/index.html
+++ b/index.html
@@ -158,5 +158,28 @@
             </div>
         </div>
     </section>
+
+    <section id="download">
+        <div class="container py-xl">
+            <div class="card px-lg even-columns itenscenter">
+                <div>
+                    <header>
+                        <strong>download</strong>
+                        <h2>Bora cantar</h2>
+                    </header>
+                    <p>Desperte seu potencial de estrela, liberte sua voz e faça parte da comunidade musical mais envolvente. Baixe o Zingen agora e transforme suas performances em experiências inesquecíveis!</p>
+                    <div class="button flex gap-1">
+                        <a href="#">
+                            <img src="assets/App store button.svg" alt="Link da App Store para baixar o app">
+                        </a>
+                        <a href="#">
+                            <img src="assets/Play Store button.svg" alt="Link da Play Store para baixar o app">
+                        </a>
+                    </div>
+                </div>
+                <img src="assets/rapaz-ouvindo-musica-com-fones-de-ouvido-e-cantando-no-aplicativo-de-karaoke-removebg 1.png" alt="Homem ouvindo música com fones de ouvindo e cantando">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
