--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="assets/icons/logo.svg">
     <title>Zingen - Karaôke</title>
     <link rel="stylesheet" href="./styles/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -181,5 +182,75 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="container py-xl grid">
+            <section class="grid top">
+                <img src="assets/icons/logo.svg" alt="">
+                <nav class="even-columns">
+                    <ul role="list" class="grid gap-1 5">
+                        <li class="title">Produto</li>
+                        <li>
+                            <a href="#features">
+                                Funcionalidades
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#pricing">
+                                Planos e preços
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#download">
+                                Download
+                            </a>
+                        </li>
+                    </ul>
+                    <ul role="list" class="grid gap-1 5">
+                        <li class="title">Empresa</li>
+                        <li>
+                            <a href="#about">
+                                Sobre nós
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Trabalhe conosco
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Blog
+                            </a>
+                        </li>
+                    </ul>
+                    <ul role="list" class="grid gap-1 5">
+                        <li class="title">Legal</li>
+                        <li>
+                            <a href="#">
+                                Termos de uso
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Política de Privacidade
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </section>
+            <section class="bottom flex gap-1.5">
+                <div class="flex gap-1.5">
+                    <a href="#" class="social" aria-label="tiktok"></a>
+                    <a href="#" class="social" aria-label="instagram"></a>
+                    <a href="#" class="social" aria-label="X"></a>
+                    <a href="#" class="social" aria-label="discord"></a>
+                </div>
+                <span class="copy">
+                    ©2024 Zingen Technologies, Inc.
+                </span>
+            </section>
+        </div>
+    </footer>
 </body>
 </html>
